--- a/EmployeeProfile/index.html
+++ b/EmployeeProfile/index.html
@@ -4,87 +4,103 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <title>Employee Profile</title>
+    <title>Proveedor de Talento</title>
   </head>
   <body>
-    <form>
-      <!-- 2 column grid layout with text inputs for the first and last names -->
-      <div class="row mb-4">
-        <div class="col">
-          <div class="form-outline">
-            <input type="text" id="form6Example1" class="form-control" />
-            <label class="form-label" for="form6Example1">First name</label>
+    <div id="signup">
+      <h1 id="title">Proveedor de Talento</h1>
+      <div id="mainContainer">
+        <div id="formz">
+          <form class="row g-3">
+            <div class="col-md-6">
+              <label class="form-label lbl lbl">Nombre Completo</label>
+              <input type="text" class="form-control" id="specificSizeInputName" placeholder="Jane Doe">
+            </div>
+            <div class="col-md-6">
+              <label class="form-label lbl">Usuario</label>
+              <div class="input-group">
+                <div class="input-group-text">@</div>
+                <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Rockstar">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <label for="inputEmail4" class="form-label lbl">Email</label>
+              <input type="email" class="form-control" id="inputEmail4" placeholder="jane.doe@example.com">
+            </div>
+            <div class="col-md-6">
+              <label for="telephone" class="form-label lbl">Teléfono</label>
+              <input type="email" class="form-control" placeholder="123456789">
+            </div>
+            <div class="col-md-6">
+              <label for="inputPassword4" class="form-label lbl">Contraseña</label>
+              <input type="password" class="form-control" id="inputPassword4" placeholder="***********">
+            </div>
+            <div class="col-md-6">
+              <label for="inputPassword4" class="form-label lbl">Confirmar Contraseña</label>
+              <input type="password" class="form-control" id="inputPassword4" placeholder="***********">
+            </div>
+            <div class="col-md-6">
+              <label for="inputCountry" class="form-label lbl">País</label>
+              <select id="inputCountry" class="form-select">
+                <option selected>Selección</option>
+                <option>...</option>
+                <option>...</option>
+              </select>
+            </div>            
+            <div class="col-md-6">
+              <label for="inputState" class="form-label lbl">Estado</label>
+              <select id="inputState" class="form-select">
+                <option selected>Selección</option>
+                <option>...</option>
+                <option>...</option>
+              </select>
+            </div>
+            <div class="col-md-6">
+              <label class="form-label lbl">Profesión</label>
+              <input type="text" class="form-control" id="specificSizeInputName" placeholder="Programador Full Stack">
+            </div>
+            <div class="col-md-6">
+              <label class="form-label lbl">Costo Hora/Persona</label>
+              <div class="input-group">
+                <div class="input-group-text">$</div>
+                <input type="text" class="form-control" placeholder="Formato MXN">
+              </div>
+            </div>
+            <div class="col-md-12">
+              <label for="inputState" class="form-label lbl">Disponibilidad de Horario</label>
+              <select class="form-select" aria-label="Default select example">
+                <option value="m">Mañana</option>
+                <option value="t">Tarde</option>
+                <option value="n">Noche</option>
+              </select>
+          </div>
+            <div class="mb-3">
+              <label for="capabilitiesDescription" class="form-label lbl">Descripción de Capacidades</label>
+              <textarea class="form-control" id="capabilitiesDescription" rows="3"></textarea>
+            </div>
+            <div class="mb-3">
+              <label for="formFile" class="form-label lbl">Fotografía</label>
+              <input class="form-control" type="file" id="formFile">
+            </div>
+            <button type="submit" class="btn btn-primary btn-block mb-4">Registrarse</button>
+          </form>
           </div>
         </div>
-        <div class="col">
-          <div class="form-outline">
-            <input type="text" id="form6Example2" class="form-control" />
-            <label class="form-label" for="form6Example2">Last name</label>
-          </div>
-        </div>
+        <br />
       </div>
-
-      <!-- Text input -->
-      <div class="form-outline mb-4">
-        <input type="text" id="form6Example3" class="form-control" />
-        <label class="form-label" for="form6Example3">Company name</label>
-      </div>
-
-      <!-- Text input -->
-      <div class="form-outline mb-4">
-        <input type="text" id="form6Example4" class="form-control" />
-        <label class="form-label" for="form6Example4">Address</label>
-      </div>
-
-      <!-- Email input -->
-      <div class="form-outline mb-4">
-        <input type="email" id="form6Example5" class="form-control" />
-        <label class="form-label" for="form6Example5">Email</label>
-      </div>
-
-      <!-- Number input -->
-      <div class="form-outline mb-4">
-        <input type="number" id="form6Example6" class="form-control" />
-        <label class="form-label" for="form6Example6">Phone</label>
-      </div>
-
-      <!-- Message input -->
-      <div class="form-outline mb-4">
-        <textarea class="form-control" id="form6Example7" rows="4"></textarea>
-        <label class="form-label" for="form6Example7"
-          >Additional information</label
-        >
-      </div>
-
-      <!-- Checkbox -->
-      <div class="form-check d-flex justify-content-center mb-4">
-        <input
-          class="form-check-input me-2"
-          type="checkbox"
-          value=""
-          id="form6Example8"
-          checked
-        />
-        <label class="form-check-label" for="form6Example8">
-          Create an account?
-        </label>
-      </div>
-
-      <!-- Submit button -->
-      <button type="submit" class="btn btn-primary btn-block mb-4">
-        Place order
-      </button>
-    </form>
+      <app-back-btn></app-back-btn>
+    </div>
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
