--- a/EmployeeProfile/Display/index.html
+++ b/EmployeeProfile/Display/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <title>Cazador de Talento</title>
+    <title>Proveedor de Talento</title>
   </head>
   <body>
     <div id="signup">
@@ -24,7 +24,7 @@
                   <nav aria-label="breadcrumb" class="bg-light rounded-3 p-3 mb-4">
                     <ol class="breadcrumb mb-0">
                       <li class="breadcrumb-item"><a href="#">Inicio</a></li>
-                      <li class="breadcrumb-item"><a href="#">Cazador De Talento</a></li>
+                      <li class="breadcrumb-item"><a href="#">Proveedor De Talento</a></li>
                       <li class="breadcrumb-item active" aria-current="page">Perfil de Usuario</li>
                     </ol>
                   </nav>
@@ -36,7 +36,7 @@
                   <div class="card mb-4">
                     <div class="card-body text-center">
                       <img src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-chat/ava3.png" alt="avatar" class="rounded-circle img-fluid" style="width: 150px;">
-                      <h5 class="my-3">John Doe</h5>
+                      <h5 class="my-3">Pedro Rosas</h5>
                       <p class="text-muted mb-1">Desarrollador Full Stack</p>
                       <p class="text-muted mb-4">Puebla, Pue</p>
                       <div class="d-flex justify-content-center mb-2">
@@ -50,23 +50,23 @@
                       <ul class="list-group list-group-flush rounded-3">
                         <li class="list-group-item d-flex justify-content-between align-items-center p-3">
                           <i class="fas fa-globe fa-lg text-warning"></i>
-                          <p class="mb-0">https://johndoe.com</p>
+                          <p class="mb-0">https://pedrorosas.com</p>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center p-3">
                           <i class="fab fa-github fa-lg" style="color: #333333;"></i>
-                          <p class="mb-0">johndoe</p>
+                          <p class="mb-0">pedrorosas</p>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center p-3">
                           <i class="fab fa-twitter fa-lg" style="color: #55acee;"></i>
-                          <p class="mb-0">@johndoe</p>
+                          <p class="mb-0">@pedrorosas</p>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center p-3">
                           <i class="fab fa-instagram fa-lg" style="color: #ac2bac;"></i>
-                          <p class="mb-0">johndoe</p>
+                          <p class="mb-0">pedrorosas</p>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center p-3">
                           <i class="fab fa-facebook-f fa-lg" style="color: #3b5998;"></i>
-                          <p class="mb-0">johndoe</p>
+                          <p class="mb-0">pedrorosas</p>
                         </li>
                       </ul>
                     </div>
@@ -80,7 +80,7 @@
                           <p class="mb-0">Nombre Completo</p>
                         </div>
                         <div class="col-sm-9">
-                          <p class="text-muted mb-0">Johnatan Doe</p>
+                          <p class="text-muted mb-0">Pedro Rosas</p>
                         </div>
                       </div>
                       <hr>
@@ -89,7 +89,7 @@
                           <p class="mb-0">Email</p>
                         </div>
                         <div class="col-sm-9">
-                          <p class="text-muted mb-0">john.doe@example.com</p>
+                          <p class="text-muted mb-0">pedro.rosas@example.com</p>
                         </div>
                       </div>
                       <hr>
@@ -126,19 +126,19 @@
                       <div class="card mb-4 mb-md-0">
                         <div class="card-body">
                           <p class="mb-4"><span class="text-primary font-italic me-1">Habilidades</span></p>
-                          <p class="mb-1" style="font-size: .77rem;">Diseño Web</p>
+                          <p class="mb-1" style="font-size: .77rem;">Análisis</p>
                           <div class="progress rounded" style="height: 5px;">
                             <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
-                          <p class="mt-4 mb-1" style="font-size: .77rem;">Scripting</p>
+                          <p class="mt-4 mb-1" style="font-size: .77rem;">Programación</p>
                           <div class="progress rounded" style="height: 5px;">
                             <div class="progress-bar" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
-                          <p class="mt-4 mb-1" style="font-size: .77rem;">Bases de Datos</p>
+                          <p class="mt-4 mb-1" style="font-size: .77rem;">Hacking</p>
                           <div class="progress rounded" style="height: 5px;">
                             <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
-                          <p class="mt-4 mb-1" style="font-size: .77rem;">Backend API</p>
+                          <p class="mt-4 mb-1" style="font-size: .77rem;">Linux</p>
                           <div class="progress rounded mb-2" style="height: 5px;">
                             <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
