--- a/ProjectAnnouncement/Form/index.html
+++ b/ProjectAnnouncement/Form/index.html
@@ -39,7 +39,46 @@
               <label for="formFile" class="form-label lbl">Poster del Proyecto</label>
               <input class="form-control" type="file" id="formFile">
             </div>
-            <button type="submit" class="btn btn-success btn-block mb-4">Proceder al Pago</button>
+
+            <div class="pt-2">
+              <div class="d-flex pb-2">
+                <div>
+                  <p>
+                    <b>Costo de Pubicación<span class="text-success">  $350 MXN</span></b>
+                  </p>
+                </div>
+                <div class="ms-auto">
+                  <p class="text-primary">
+                    <i class="fas fa-plus-circle text-primary pe-1"></i>Añadir tarjeta de pago
+                  </p>
+                </div>
+              </div>
+            </div>
+              <div class="d-flex flex-row pb-3">
+                <div class="d-flex align-items-center pe-2">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="radioNoLabel"
+                    id="radioNoLabel1"
+                    value=""
+                    aria-label="..."
+                    checked
+                  />
+                </div>
+                <div class="rounded border d-flex w-100 p-3 align-items-center">
+                  <p class="mb-0">
+                    <i class="fab fa-cc-visa fa-lg text-primary pe-2"></i>Tarjet de Débito
+                    Visa
+                  </p>
+                  <div class="ms-auto">************3456</div>
+                </div>
+              </div>
+              <input
+                type="button"
+                value="Proceed to payment"
+                class="btn btn-success btn-block btn-lg"
+              />
           </form>
           </div>
         </div>
@@ -52,5 +91,7 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"
   ></script>
+  <script src="https://kit.fontawesome.com/34b5fdf7f9.js" crossorigin="anonymous"></script>
+
   </body>
 </html>
