--- a/ProjectAnnouncement/Form/index.html
+++ b/ProjectAnnouncement/Form/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="mb-3">
               <label for="capabilitiesDescription" class="form-label lbl">Descripción del Proyecto</label>
-              <textarea class="form-control" id="capabilitiesDescription" rows="3" placeholder="Est proyecto trata de tal y cual."></textarea>
+              <textarea class="form-control" id="capabilitiesDescription" rows="3" placeholder="Esta proyecto trata de tal y cual."></textarea>
             </div>  
             <div class="col-md-12">
               <label for="inputState" class="form-label lbl">Categoria</label>
