--- a/HeadHunterProfile/Display/index.html
+++ b/HeadHunterProfile/Display/index.html
@@ -39,6 +39,14 @@
                       <h5 class="my-3">Martina Ferreira</h5>
                       <p class="text-muted mb-1">CTO de Grupo Coeus</p>
                       <p class="text-muted mb-4">Torreón, Coahuila</p>
+                      <li class=" d-flex justify-content-between align-items-center">
+                        <p class="text-muted mb-0">Reputación: </p>
+                        <i class="fas fa-star" style="color: #f3ef0c;"></i>
+                        <i class="fas fa-star" style="color: #f3ef0c;"></i>
+                        <i class="fas fa-star" style="color: #f3ef0c;"></i>
+                        <i class="fas fa-star" style="color: #f3ef0c;"></i>
+                      </li>
+                      <br />
                       <div class="d-flex justify-content-center mb-2">
                         <button type="button" class="btn btn-primary">Seguir</button>
                         <button type="button" class="btn btn-outline-primary ms-1">Enviar Mensaje</button>
