Add corrections to Head Hunter form

--- a/HeadHunterProfile/Form/index.html
+++ b/HeadHunterProfile/Form/index.html
@@ -31,6 +31,10 @@
               </div>
             </div>
             <div class="col-md-6">
+              <label class="form-label lbl">Nombre de la Compañia</label>
+              <input type="text" class="form-control" id="specificSizeInputName" placeholder="Jane Doe">
+            </div>
+            <div class="col-md-6">
               <label for="inputEmail4" class="form-label lbl">Email</label>
               <input type="email" class="form-control" id="inputEmail4" placeholder="jane.doe@example.com">
             </div>
@@ -54,7 +58,7 @@
                 <option>...</option>
               </select>
             </div>            
-            <div class="col-md-6">
+            <div class="col-md-12">
               <label for="inputState" class="form-label lbl">Estado</label>
               <select id="inputState" class="form-select">
                 <option selected>Selección</option>
