Add some changes

--- a/SpeedDate/Form/index.html
+++ b/SpeedDate/Form/index.html
@@ -31,7 +31,7 @@
             <div class="col-md-12">
               <label for="inputState" class="form-label lbl">Modalidad</label>
               <select id="inputState" class="form-select">
-                <option selected>Física</option>
+                <option selected>Presencial</option>
                 <option>En Linea</option>
               </select>
             </div>
