--- a/ProjectAnnouncement/Form/index.html
+++ b/ProjectAnnouncement/Form/index.html
@@ -76,7 +76,7 @@
               </div>
               <input
                 type="button"
-                value="Proceed to payment"
+                value="Proceder al Pago"
                 class="btn btn-success btn-block btn-lg"
               />
           </form>
